--- a/cours5/index.html
+++ b/cours5/index.html
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2548476
+<pre><code>## [1] 0.3559557
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [2,]  Inf    0    2  Inf    3    2    2    3    2     2     1     1     2
-##  [3,]  Inf    2    0  Inf    1    3    2    3    2     2     1     2     2
-##  [4,]  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [5,]  Inf    3    1  Inf    0    4    3    4    1     2     2     3     3
-##  [6,]  Inf    2    3  Inf    4    0    3    4    3     2     2     1     3
-##  [7,]  Inf    2    2  Inf    3    3    0    3    2     2     1     2     2
-##  [8,]  Inf    3    3  Inf    4    4    3    0    3     3     2     3     1
-##  [9,]  Inf    2    2  Inf    1    3    2    3    0     2     1     2     2
-## [10,]  Inf    2    2  Inf    2    2    2    3    2     0     1     1     2
-## [11,]  Inf    1    1  Inf    2    2    1    2    1     1     0     1     1
-## [12,]  Inf    1    2  Inf    3    1    2    3    2     1     1     0     2
-## [13,]  Inf    2    2  Inf    3    3    2    1    2     2     1     2     0
-## [14,]  Inf    3    3  Inf    3    3    1    4    3     1     2     2     3
-## [15,]  Inf    2    2  Inf    1    3    2    3    2     1     1     2     2
+##  [1,]    0    1    2    2    2    4    1    3    2   Inf     3     3     3
+##  [2,]    1    0    1    1    2    4    1    3    3   Inf     2     2     2
+##  [3,]    2    1    0    2    3    4    2    3    4   Inf     2     1     1
+##  [4,]    2    1    2    0    3    3    2    2    4   Inf     1     3     2
+##  [5,]    2    2    3    3    0    2    1    1    2   Inf     2     4     3
+##  [6,]    4    4    4    3    2    0    3    1    4   Inf     2     5     3
+##  [7,]    1    1    2    2    1    3    0    2    3   Inf     3     3     3
+##  [8,]    3    3    3    2    1    1    2    0    3   Inf     1     4     2
+##  [9,]    2    3    4    4    2    4    3    3    0   Inf     4     5     5
+## [10,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf     0   Inf   Inf   Inf
+## [11,]    3    2    2    1    2    2    3    1    4   Inf     0     3     1
+## [12,]    3    2    1    3    4    5    3    4    5   Inf     3     0     2
+## [13,]    3    2    1    2    3    3    3    2    5   Inf     1     2     0
+## [14,]    1    2    3    3    1    3    2    2    1   Inf     3     4     4
+## [15,]    4    3    2    3    4    4    4    3    6   Inf     2     3     1
 ##       [,14] [,15]
-##  [1,]   Inf   Inf
-##  [2,]     3     2
+##  [1,]     1     4
+##  [2,]     2     3
 ##  [3,]     3     2
-##  [4,]   Inf   Inf
-##  [5,]     3     1
-##  [6,]     3     3
-##  [7,]     1     2
-##  [8,]     4     3
-##  [9,]     3     2
-## [10,]     1     1
-## [11,]     2     1
-## [12,]     2     2
-## [13,]     3     2
-## [14,]     0     2
-## [15,]     2     0
+##  [4,]     3     3
+##  [5,]     1     4
+##  [6,]     3     4
+##  [7,]     2     4
+##  [8,]     2     3
+##  [9,]     1     6
+## [10,]   Inf   Inf
+## [11,]     3     2
+## [12,]     4     3
+## [13,]     4     1
+## [14,]     0     5
+## [15,]     5     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 4.962722e-18 4.272023e-01 3.449777e-01 4.962722e-18 3.287791e-01
-##  [6] 1.675823e-01 3.428164e-01 7.227404e-02 3.449777e-01 8.915038e-01
-## [11] 1.000000e+00 6.454904e-01 2.783839e-01 3.204543e-01 5.764300e-01
+<pre><code>##  [1] 0.6221383 0.7615848 0.4718699 0.5730492 0.6884847 0.3140924 0.6740959
+##  [8] 0.9655371 0.1551067 0.0000000 1.0000000 0.1535008 0.5354685 0.4768066
+## [15] 0.1741896
 </code></pre>
 
   </article>
