--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 14
+<pre><code>## [1] 17
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4872449
+<pre><code>## [1] 0.384083
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0  Inf  Inf  Inf    3    1  Inf  Inf  Inf     2     5     1     2
-##  [2,]  Inf    0    2  Inf  Inf  Inf  Inf    1  Inf   Inf   Inf   Inf   Inf
-##  [3,]  Inf    2    0  Inf  Inf  Inf  Inf    1  Inf   Inf   Inf   Inf   Inf
-##  [4,]  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [5,]    3  Inf  Inf  Inf    0    2  Inf  Inf  Inf     4     2     3     3
-##  [6,]    1  Inf  Inf  Inf    2    0  Inf  Inf  Inf     2     4     1     1
-##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
-##  [8,]  Inf    1    1  Inf  Inf  Inf  Inf    0  Inf   Inf   Inf   Inf   Inf
-##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
-## [10,]    2  Inf  Inf  Inf    4    2  Inf  Inf  Inf     0     6     1     1
-## [11,]    5  Inf  Inf  Inf    2    4  Inf  Inf  Inf     6     0     5     5
-## [12,]    1  Inf  Inf  Inf    3    1  Inf  Inf  Inf     1     5     0     2
-## [13,]    2  Inf  Inf  Inf    3    1  Inf  Inf  Inf     1     5     2     0
-## [14,]    4  Inf  Inf  Inf    1    3  Inf  Inf  Inf     5     1     4     4
-## [15,]    2  Inf  Inf  Inf    1    1  Inf  Inf  Inf     3     3     2     2
+##  [1,]    0    5    3    6    4    1    5    3    7     4     3   Inf     2
+##  [2,]    5    0    4    1    5    4    2    2    2     1     2   Inf     3
+##  [3,]    3    4    0    5    1    2    4    2    6     3     4   Inf     3
+##  [4,]    6    1    5    0    6    5    3    3    1     2     3   Inf     4
+##  [5,]    4    5    1    6    0    3    5    3    7     4     5   Inf     4
+##  [6,]    1    4    2    5    3    0    4    2    6     3     2   Inf     1
+##  [7,]    5    2    4    3    5    4    0    2    4     1     2   Inf     3
+##  [8,]    3    2    2    3    3    2    2    0    4     1     2   Inf     1
+##  [9,]    7    2    6    1    7    6    4    4    0     3     4   Inf     5
+## [10,]    4    1    3    2    4    3    1    1    3     0     1   Inf     2
+## [11,]    3    2    4    3    5    2    2    2    4     1     0   Inf     1
+## [12,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf     0   Inf
+## [13,]    2    3    3    4    4    1    3    1    5     2     1   Inf     0
+## [14,]    2    3    1    4    2    1    3    1    5     2     3   Inf     2
+## [15,]    1    6    4    7    5    2    6    4    8     5     4   Inf     3
 ##       [,14] [,15]
-##  [1,]     4     2
-##  [2,]   Inf   Inf
-##  [3,]   Inf   Inf
-##  [4,]   Inf   Inf
-##  [5,]     1     1
-##  [6,]     3     1
-##  [7,]   Inf   Inf
-##  [8,]   Inf   Inf
-##  [9,]   Inf   Inf
-## [10,]     5     3
-## [11,]     1     3
-## [12,]     4     2
-## [13,]     4     2
-## [14,]     0     2
-## [15,]     2     0
+##  [1,]     2     1
+##  [2,]     3     6
+##  [3,]     1     4
+##  [4,]     4     7
+##  [5,]     2     5
+##  [6,]     1     2
+##  [7,]     3     6
+##  [8,]     1     4
+##  [9,]     5     8
+## [10,]     2     5
+## [11,]     3     4
+## [12,]   Inf   Inf
+## [13,]     2     3
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 7.093697e-01 0.000000e+00 0.000000e+00 8.425888e-17 2.117992e-01
-##  [6] 1.000000e+00 7.986880e-17 0.000000e+00 7.986880e-17 5.539277e-01
-## [11] 3.595182e-02 8.621727e-01 5.919479e-01 9.437744e-02 4.616186e-01
+<pre><code>##  [1] 0.19210637 0.26254530 0.22850861 0.10170874 0.07816507 0.49589271
+##  [7] 0.22775417 1.00000000 0.03479112 0.66581898 0.45616281 0.00000000
+## [13] 0.66773224 0.58985943 0.06571310
 </code></pre>
 
   </article>
