--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 23
+<pre><code>## [1] 21
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3601134
+<pre><code>## [1] 0.3979592
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    1    2    2    2    1    2    3     2     3     1     2
-##  [2,]    3    0    4    4    1    4    4    4    3     3     3     2     4
-##  [3,]    1    4    0    1    3    3    2    1    2     2     2     2     1
-##  [4,]    2    4    1    0    3    2    3    2    1     3     3     3     2
-##  [5,]    2    1    3    3    0    3    3    3    2     2     2     1     3
-##  [6,]    2    4    3    2    3    0    1    2    3     3     1     3     2
-##  [7,]    1    4    2    3    3    1    0    3    4     3     2     2     3
-##  [8,]    2    4    1    2    3    2    3    0    3     1     1     2     2
-##  [9,]    3    3    2    1    2    3    4    3    0     4     2     3     3
-## [10,]    2    3    2    3    2    3    3    1    4     0     2     1     3
-## [11,]    3    3    2    3    2    1    2    1    2     2     0     3     1
-## [12,]    1    2    2    3    1    3    2    2    3     1     3     0     3
-## [13,]    2    4    1    2    3    2    3    2    3     3     1     3     0
-## [14,]    3    2    3    2    1    2    3    2    1     3     1     2     2
-## [15,]    3    3    2    1    2    1    2    3    2     4     2     3     3
+##  [1,]    0    1    3    3    3    2    1    2    2     1     1     2     3
+##  [2,]    1    0    2    2    2    3    2    3    1     2     2     1     3
+##  [3,]    3    2    0    3    2    2    2    3    2     2     3     1     1
+##  [4,]    3    2    3    0    2    3    4    5    1     4     4     2     4
+##  [5,]    3    2    2    2    0    1    4    3    1     4     2     1     2
+##  [6,]    2    3    2    3    1    0    3    2    2     3     1     2     1
+##  [7,]    1    2    2    4    4    3    0    3    3     2     2     3     3
+##  [8,]    2    3    3    5    3    2    3    0    4     1     1     4     3
+##  [9,]    2    1    2    1    1    2    3    4    0     3     3     1     3
+## [10,]    1    2    2    4    4    3    2    1    3     0     2     3     3
+## [11,]    1    2    3    4    2    1    2    1    3     2     0     3     2
+## [12,]    2    1    1    2    1    2    3    4    1     3     3     0     2
+## [13,]    3    3    1    4    2    1    3    3    3     3     2     2     0
+## [14,]    2    3    1    4    3    3    1    2    3     1     3     2     2
+## [15,]    3    2    2    3    2    3    4    5    2     4     4     1     3
 ##       [,14] [,15]
-##  [1,]     3     3
-##  [2,]     2     3
-##  [3,]     3     2
-##  [4,]     2     1
-##  [5,]     1     2
-##  [6,]     2     1
-##  [7,]     3     2
-##  [8,]     2     3
-##  [9,]     1     2
-## [10,]     3     4
-## [11,]     1     2
-## [12,]     2     3
+##  [1,]     2     3
+##  [2,]     3     2
+##  [3,]     1     2
+##  [4,]     4     3
+##  [5,]     3     2
+##  [6,]     3     3
+##  [7,]     1     4
+##  [8,]     2     5
+##  [9,]     3     2
+## [10,]     1     4
+## [11,]     3     4
+## [12,]     2     1
 ## [13,]     2     3
-## [14,]     0     1
-## [15,]     1     0
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.44972025 0.08711557 1.00000000 0.85274428 0.30029693 0.44760484
-##  [7] 0.26031230 0.56971254 0.68567780 0.24937858 0.71448315 0.28992280
-## [13] 0.78746639 0.65811813 0.56814762
+<pre><code>##  [1] 0.5722816 0.7635347 0.5260956 0.2708466 0.7239081 0.4458242 0.2966299
+##  [8] 0.2400698 0.8643340 0.3718579 0.3942602 1.0000000 0.3045595 0.3743331
+## [15] 0.3133587
 </code></pre>
 
   </article>
