Update the slides

--- a/cours6/index.html
+++ b/cours6/index.html
@@ -1267,7 +1267,7 @@ $I(S)$ et $E(S)$ se croisent, ce qui donne pour solution \ref{eq:tib}.
 
 <p>Si vous voulez en savoir davantage: <a href="http://steveviss.github.io/Talk_bib/#1">http://steveviss.github.io/Talk_bib/#1</a></p>
 
-<h2>Exercice 6 (suite):</h2>
+<h2>Exercice 6 (suite)</h2>
 
 <p><strong>Étape 2.</strong> En vous servant de Google Scholar, remplisser votre fichier <code>mabiblio.bib</code> avec 2 entrées bibtex.</p>
 
