--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 14
+<pre><code>## [1] 29
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.492347
+<pre><code>## [1] 0.3263972
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    3    1    2    3  Inf    4    1     2     3     2   Inf
-##  [2,]    2    0    3    1    4    1  Inf    4    3     4     3     2   Inf
-##  [3,]    3    3    0    2    5    4  Inf    1    4     5     2     1   Inf
-##  [4,]    1    1    2    0    3    2  Inf    3    2     3     2     1   Inf
-##  [5,]    2    4    5    3    0    5  Inf    6    1     2     5     4   Inf
-##  [6,]    3    1    4    2    5    0  Inf    5    4     5     4     3   Inf
-##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
-##  [8,]    4    4    1    3    6    5  Inf    0    5     6     3     2   Inf
-##  [9,]    1    3    4    2    1    4  Inf    5    0     1     4     3   Inf
-## [10,]    2    4    5    3    2    5  Inf    6    1     0     5     4   Inf
-## [11,]    3    3    2    2    5    4  Inf    3    4     5     0     1   Inf
-## [12,]    2    2    1    1    4    3  Inf    2    3     4     1     0   Inf
-## [13,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf     0
-## [14,]    4    2    5    3    6    1  Inf    6    5     6     5     4   Inf
-## [15,]    3    1    4    2    5    2  Inf    5    4     5     4     3   Inf
+##  [1,]    0    2    2    1    1    1    3    2    1     1     2     1     3
+##  [2,]    2    0    1    1    1    2    1    1    2     1     2     2     2
+##  [3,]    2    1    0    2    2    1    2    2    1     2     1     1     3
+##  [4,]    1    1    2    0    2    2    2    2    2     2     3     2     2
+##  [5,]    1    1    2    2    0    2    2    2    1     2     2     1     3
+##  [6,]    1    2    1    2    2    0    3    3    2     2     2     2     2
+##  [7,]    3    1    2    2    2    3    0    2    3     2     3     3     1
+##  [8,]    2    1    2    2    2    3    2    0    3     1     3     3     3
+##  [9,]    1    2    1    2    1    2    3    3    0     2     1     1     4
+## [10,]    1    1    2    2    2    2    2    1    2     0     3     2     3
+## [11,]    2    2    1    3    2    2    3    3    1     3     0     2     4
+## [12,]    1    2    1    2    1    2    3    3    1     2     2     0     4
+## [13,]    3    2    3    2    3    2    1    3    4     3     4     4     0
+## [14,]    2    1    2    1    2    1    2    2    3     2     3     3     1
+## [15,]    2    3    2    3    3    1    4    4    3     3     3     3     3
 ##       [,14] [,15]
-##  [1,]     4     3
-##  [2,]     2     1
-##  [3,]     5     4
-##  [4,]     3     2
-##  [5,]     6     5
-##  [6,]     1     2
-##  [7,]   Inf   Inf
-##  [8,]     6     5
-##  [9,]     5     4
-## [10,]     6     5
-## [11,]     5     4
-## [12,]     4     3
-## [13,]   Inf   Inf
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]     2     2
+##  [2,]     1     3
+##  [3,]     2     2
+##  [4,]     1     3
+##  [5,]     2     3
+##  [6,]     1     1
+##  [7,]     2     4
+##  [8,]     2     4
+##  [9,]     3     3
+## [10,]     2     3
+## [11,]     3     3
+## [12,]     3     3
+## [13,]     1     3
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.23922282 0.27373883 0.82994975 0.54605684 0.04214045 0.11359474
-##  [7] 0.00000000 0.29954476 0.11675869 0.04214045 0.56474726 1.00000000
-## [13] 0.00000000 0.04099852 0.09879759
+<pre><code>##  [1] 0.74880573 0.56632342 0.61382406 0.33382449 0.84557453 0.35946676
+##  [7] 0.13668144 0.18391851 0.72943285 0.31339772 0.28082740 1.00000000
+## [13] 0.08745285 0.28162407 0.07515176
 </code></pre>
 
   </article>
