--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 22
+<pre><code>## [1] 26
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2985537
+<pre><code>## [1] 0.3173077
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    1    3    4    3    4    3    2  Inf     2     3   Inf     4
-##  [2,]    1    0    2    3    2    3    2    1  Inf     1     2   Inf     3
-##  [3,]    3    2    0    3    2    2    2    2  Inf     1     1   Inf     2
-##  [4,]    4    3    3    0    3    4    2    2  Inf     2     3   Inf     3
-##  [5,]    3    2    2    3    0    4    2    3  Inf     1     3   Inf     3
-##  [6,]    4    3    2    4    4    0    3    2  Inf     3     3   Inf     2
-##  [7,]    3    2    2    2    2    3    0    2  Inf     1     2   Inf     1
-##  [8,]    2    1    2    2    3    2    2    0  Inf     2     1   Inf     2
-##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
-## [10,]    2    1    1    2    1    3    1    2  Inf     0     2   Inf     2
-## [11,]    3    2    1    3    3    3    2    1  Inf     2     0   Inf     1
-## [12,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf     0   Inf
-## [13,]    4    3    2    3    3    2    1    2  Inf     2     1   Inf     0
-## [14,]    3    2    2    1    2    3    1    1  Inf     1     2   Inf     2
-## [15,]    3    2    1    3    3    1    2    1  Inf     2     2   Inf     1
+##  [1,]    0    2    3    1    2    2    3    3    1     3     2     3     4
+##  [2,]    2    0    2    1    2    2    3    2    1     1     2     1     4
+##  [3,]    3    2    0    2    2    2    3    2    3     1     1     1     3
+##  [4,]    1    1    2    0    2    1    2    2    2     2     1     2     3
+##  [5,]    2    2    2    2    0    2    2    2    1     1     3     1     5
+##  [6,]    2    2    2    1    2    0    1    1    3     2     1     3     3
+##  [7,]    3    3    3    2    2    1    0    2    3     3     2     3     4
+##  [8,]    3    2    2    2    2    1    2    0    3     1     2     3     4
+##  [9,]    1    1    3    2    1    3    3    3    0     2     3     2     5
+## [10,]    3    1    1    2    1    2    3    1    2     0     2     2     4
+## [11,]    2    2    1    1    3    1    2    2    3     2     0     2     2
+## [12,]    3    1    1    2    1    3    3    3    2     2     2     0     4
+## [13,]    4    4    3    3    5    3    4    4    5     4     2     4     0
+## [14,]    2    2    3    1    1    1    1    2    2     2     2     2     4
+## [15,]    3    3    2    2    4    2    3    3    4     3     1     3     1
 ##       [,14] [,15]
-##  [1,]     3     3
-##  [2,]     2     2
-##  [3,]     2     1
-##  [4,]     1     3
-##  [5,]     2     3
-##  [6,]     3     1
-##  [7,]     1     2
-##  [8,]     1     1
-##  [9,]   Inf   Inf
-## [10,]     1     2
-## [11,]     2     2
-## [12,]   Inf   Inf
-## [13,]     2     1
-## [14,]     0     2
-## [15,]     2     0
+##  [1,]     2     3
+##  [2,]     2     3
+##  [3,]     3     2
+##  [4,]     1     2
+##  [5,]     1     4
+##  [6,]     1     2
+##  [7,]     1     3
+##  [8,]     2     3
+##  [9,]     2     4
+## [10,]     2     3
+## [11,]     2     1
+## [12,]     2     3
+## [13,]     4     1
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.803899e-01 6.685346e-01 7.410055e-01 2.425172e-01 5.396575e-01
-##  [6] 1.407395e-01 5.609343e-01 6.287011e-01 4.174194e-17 1.000000e+00
-## [11] 4.836127e-01 4.174194e-17 4.225884e-01 6.562647e-01 5.215883e-01
+<pre><code>##  [1] 0.35362206 0.71780947 0.81468971 0.94487640 0.66670278 0.89238465
+##  [7] 0.41705009 0.39588807 0.44289807 0.66126096 1.00000000 0.76797679
+## [13] 0.06943788 0.74431039 0.27250597
 </code></pre>
 
   </article>
