Update the slides

--- a/cours6/index.html
+++ b/cours6/index.html
@@ -1242,7 +1242,15 @@ $I(S)$ et $E(S)$ se croisent, ce qui donne pour solution \ref{eq:tib}.
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     
+     <h2>Ou encore d&#39;une liste numérotée</h2>
+
+<pre><code class="tex">\begin{enumerate}
+  \item Premier élément
+  \item Second élément
+  \item Troisième élément
+\end{enumerate}
+</code></pre>
+
     </div>
   </article>
 </slide>
