--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 26
+<pre><code>## [1] 21
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3173077
+<pre><code>## [1] 0.2539682
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    3    1    2    2    3    3    1     3     2     3     4
-##  [2,]    2    0    2    1    2    2    3    2    1     1     2     1     4
-##  [3,]    3    2    0    2    2    2    3    2    3     1     1     1     3
-##  [4,]    1    1    2    0    2    1    2    2    2     2     1     2     3
-##  [5,]    2    2    2    2    0    2    2    2    1     1     3     1     5
-##  [6,]    2    2    2    1    2    0    1    1    3     2     1     3     3
-##  [7,]    3    3    3    2    2    1    0    2    3     3     2     3     4
-##  [8,]    3    2    2    2    2    1    2    0    3     1     2     3     4
-##  [9,]    1    1    3    2    1    3    3    3    0     2     3     2     5
-## [10,]    3    1    1    2    1    2    3    1    2     0     2     2     4
-## [11,]    2    2    1    1    3    1    2    2    3     2     0     2     2
-## [12,]    3    1    1    2    1    3    3    3    2     2     2     0     4
-## [13,]    4    4    3    3    5    3    4    4    5     4     2     4     0
-## [14,]    2    2    3    1    1    1    1    2    2     2     2     2     4
-## [15,]    3    3    2    2    4    2    3    3    4     3     1     3     1
+##  [1,]    0    3    3    2    2    2    1  Inf    4     3     3     3     4
+##  [2,]    3    0    2    1    2    1    2  Inf    2     2     1     2     1
+##  [3,]    3    2    0    2    2    3    3  Inf    2     2     1     1     1
+##  [4,]    2    1    2    0    2    2    1  Inf    3     2     2     1     2
+##  [5,]    2    2    2    2    0    3    3  Inf    2     2     1     1     3
+##  [6,]    2    1    3    2    3    0    1  Inf    3     1     2     2     2
+##  [7,]    1    2    3    1    3    1    0  Inf    4     2     3     2     3
+##  [8,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf   Inf   Inf   Inf   Inf
+##  [9,]    4    2    2    3    2    3    4  Inf    0     3     1     2     3
+## [10,]    3    2    2    2    2    1    2  Inf    3     0     2     1     3
+## [11,]    3    1    1    2    1    2    3  Inf    1     2     0     1     2
+## [12,]    3    2    1    1    1    2    2  Inf    2     1     1     0     2
+## [13,]    4    1    1    2    3    2    3  Inf    3     3     2     2     0
+## [14,]    2    3    1    3    2    4    3  Inf    3     3     2     2     2
+## [15,]    1    3    2    3    1    3    2  Inf    3     3     2     2     3
 ##       [,14] [,15]
-##  [1,]     2     3
-##  [2,]     2     3
-##  [3,]     3     2
-##  [4,]     1     2
-##  [5,]     1     4
-##  [6,]     1     2
-##  [7,]     1     3
-##  [8,]     2     3
-##  [9,]     2     4
-## [10,]     2     3
-## [11,]     2     1
-## [12,]     2     3
-## [13,]     4     1
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]     2     1
+##  [2,]     3     3
+##  [3,]     1     2
+##  [4,]     3     3
+##  [5,]     2     1
+##  [6,]     4     3
+##  [7,]     3     2
+##  [8,]   Inf   Inf
+##  [9,]     3     3
+## [10,]     3     3
+## [11,]     2     2
+## [12,]     2     2
+## [13,]     2     3
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.35362206 0.71780947 0.81468971 0.94487640 0.66670278 0.89238465
-##  [7] 0.41705009 0.39588807 0.44289807 0.66126096 1.00000000 0.76797679
-## [13] 0.06943788 0.74431039 0.27250597
+<pre><code>##  [1] 2.010237e-01 7.041335e-01 7.950397e-01 5.919376e-01 6.758270e-01
+##  [6] 4.218418e-01 3.500586e-01 2.332659e-17 2.875157e-01 4.097191e-01
+## [11] 9.977613e-01 1.000000e+00 4.320029e-01 3.292498e-01 3.475509e-01
 </code></pre>
 
   </article>
