--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 28
+<pre><code>## [1] 18
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3883929
+<pre><code>## [1] 0.4367284
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    4    2    4    3    2    3    4    1     1     3     4     1
-##  [2,]    4    0    3    2    2    2    1    2    4     4     3     2     3
-##  [3,]    2    3    0    3    2    1    2    3    1     1     2     3     2
-##  [4,]    4    2    3    0    3    2    1    2    4     4     1     2     3
-##  [5,]    3    2    2    3    0    1    2    1    3     3     2     3     2
-##  [6,]    2    2    1    2    1    0    1    2    2     2     1     2     1
-##  [7,]    3    1    2    1    2    1    0    1    3     3     2     1     2
-##  [8,]    4    2    3    2    1    2    1    0    4     4     3     2     3
-##  [9,]    1    4    1    4    3    2    3    4    0     2     3     4     2
-## [10,]    1    4    1    4    3    2    3    4    2     0     3     4     1
-## [11,]    3    3    2    1    2    1    2    3    3     3     0     3     2
-## [12,]    4    2    3    2    3    2    1    2    4     4     3     0     3
-## [13,]    1    3    2    3    2    1    2    3    2     1     2     3     0
-## [14,]    3    2    1    3    2    1    2    3    2     2     2     3     2
-## [15,]    4    1    2    3    1    2    2    2    3     3     3     3     3
+##  [1,]    0  Inf    4    4    1    5    4    1    3     1     2     2     3
+##  [2,]  Inf    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [3,]    4  Inf    0    2    3    3    2    5    1     5     2     4     2
+##  [4,]    4  Inf    2    0    3    3    2    5    1     5     2     4     2
+##  [5,]    1  Inf    3    3    0    4    3    2    2     2     1     1     2
+##  [6,]    5  Inf    3    3    4    0    1    6    2     6     3     5     3
+##  [7,]    4  Inf    2    2    3    1    0    5    1     5     2     4     2
+##  [8,]    1  Inf    5    5    2    6    5    0    4     2     3     3     4
+##  [9,]    3  Inf    1    1    2    2    1    4    0     4     1     3     1
+## [10,]    1  Inf    5    5    2    6    5    2    4     0     3     1     4
+## [11,]    2  Inf    2    2    1    3    2    3    1     3     0     2     1
+## [12,]    2  Inf    4    4    1    5    4    3    3     1     2     0     3
+## [13,]    3  Inf    2    2    2    3    2    4    1     4     1     3     0
+## [14,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+## [15,]    2  Inf    4    4    1    5    4    3    3     2     2     1     3
 ##       [,14] [,15]
-##  [1,]     3     4
-##  [2,]     2     1
-##  [3,]     1     2
-##  [4,]     3     3
-##  [5,]     2     1
-##  [6,]     1     2
-##  [7,]     2     2
-##  [8,]     3     2
-##  [9,]     2     3
-## [10,]     2     3
-## [11,]     2     3
-## [12,]     3     3
-## [13,]     2     3
-## [14,]     0     1
-## [15,]     1     0
+##  [1,]   Inf     2
+##  [2,]   Inf   Inf
+##  [3,]   Inf     4
+##  [4,]   Inf     4
+##  [5,]   Inf     1
+##  [6,]   Inf     5
+##  [7,]   Inf     4
+##  [8,]   Inf     3
+##  [9,]   Inf     3
+## [10,]   Inf     2
+## [11,]   Inf     2
+## [12,]   Inf     1
+## [13,]   Inf     3
+## [14,]     0   Inf
+## [15,]   Inf     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.00000000 0.12621212 0.46464109 0.18310282 0.20602438 0.53632803
-##  [7] 0.33201714 0.12888145 0.59037546 0.52658258 0.21619121 0.07953076
-## [13] 0.73368381 0.28645161 0.19488074
+<pre><code>##  [1] 2.346412e-01 3.654906e-18 3.162819e-01 3.162819e-01 4.285400e-01
+##  [6] 2.223068e-01 7.028755e-01 7.421278e-02 1.000000e+00 2.391208e-01
+## [11] 6.131963e-01 2.822749e-01 5.102249e-01 5.744495e-17 2.248179e-01
 </code></pre>
 
   </article>
