Update the slides

--- a/cours6/index.html
+++ b/cours6/index.html
@@ -566,7 +566,7 @@ Transcript written on doc.log.
 
 \maketitle
 
-\tableofcontent
+\tableofcontents
 
 \section{Ma première section}
 
@@ -583,7 +583,7 @@ Transcript written on doc.log.
 
     </div>
     <div class='right' style='float:right;width:45%'>
-     <p>La simple déclaration de la balise <code>\tableofcontent</code> permet la création d&#39;une table des matières.</p>
+     <p>La simple déclaration de la balise <code>\tableofcontents</code> permet la création d&#39;une table des matières.</p>
 
     </div>
   </article>
