Update the slides

--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 23
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4272211
+<pre><code>## [1] 0.3394097
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    4    3    1    3    2    1    3     2     2     2     4
-##  [2,]    3    0    1    3    2    4    3    2    2     3     3     1     2
-##  [3,]    4    1    0    2    3    5    3    3    3     4     4     2     1
-##  [4,]    3    3    2    0    2    6    1    4    4     5     5     3     1
-##  [5,]    1    2    3    2    0    4    1    2    2     3     3     1     3
-##  [6,]    3    4    5    6    4    0    5    2    5     1     2     3     6
-##  [7,]    2    3    3    1    1    5    0    3    3     4     4     2     2
-##  [8,]    1    2    3    4    2    2    3    0    3     1     1     1     4
-##  [9,]    3    2    3    4    2    5    3    3    0     4     4     2     4
-## [10,]    2    3    4    5    3    1    4    1    4     0     1     2     5
-## [11,]    2    3    4    5    3    2    4    1    4     1     0     2     5
-## [12,]    2    1    2    3    1    3    2    1    2     2     2     0     3
-## [13,]    4    2    1    1    3    6    2    4    4     5     5     3     0
-## [14,]    2    1    2    3    1    4    2    2    1     3     3     1     3
-## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [1,]    0    2    1    3    2    1    3    1    1     3     1     2     3
+##  [2,]    2    0    2    2    4    1    3    1    3     1     2     2     3
+##  [3,]    1    2    0    3    3    1    3    1    2     3     1     2     4
+##  [4,]    3    2    3    0    4    3    4    3    3     3     2     3     3
+##  [5,]    2    4    3    4    0    3    3    3    1     3     3     2     3
+##  [6,]    1    1    1    3    3    0    4    2    2     2     2     3     4
+##  [7,]    3    3    3    4    3    4    0    4    2     2     2     1     4
+##  [8,]    1    1    1    3    3    2    4    0    2     2     2     3     4
+##  [9,]    1    3    2    3    1    2    2    2    0     2     2     1     2
+## [10,]    3    1    3    3    3    2    2    2    2     0     2     1     4
+## [11,]    1    2    1    2    3    2    2    2    2     2     0     1     3
+## [12,]    2    2    2    3    2    3    1    3    1     1     1     0     3
+## [13,]    3    3    4    3    3    4    4    4    2     4     3     3     0
+## [14,]    2    1    2    1    3    2    3    2    2     2     1     2     2
+## [15,]    2    2    3    2    2    3    3    3    1     3     2     2     1
 ##       [,14] [,15]
-##  [1,]     2   Inf
-##  [2,]     1   Inf
-##  [3,]     2   Inf
-##  [4,]     3   Inf
-##  [5,]     1   Inf
-##  [6,]     4   Inf
-##  [7,]     2   Inf
-##  [8,]     2   Inf
-##  [9,]     1   Inf
-## [10,]     3   Inf
-## [11,]     3   Inf
-## [12,]     1   Inf
-## [13,]     3   Inf
-## [14,]     0   Inf
-## [15,]   Inf     0
+##  [1,]     2     2
+##  [2,]     1     2
+##  [3,]     2     3
+##  [4,]     1     2
+##  [5,]     3     2
+##  [6,]     2     3
+##  [7,]     3     3
+##  [8,]     2     3
+##  [9,]     2     1
+## [10,]     2     3
+## [11,]     1     2
+## [12,]     2     2
+## [13,]     2     1
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.4174352 0.6673954 0.2038653 0.1295290 0.8762737 0.1023368 0.2604547
-##  [8] 0.7357433 0.1828285 0.3951958 0.2928590 1.0000000 0.1198750 0.7060322
-## [15] 0.0000000
+<pre><code>##  [1] 1.00000000 0.59342282 0.85161090 0.12284530 0.18730708 0.64125841
+##  [7] 0.12812321 0.86923156 0.71417717 0.28376007 0.73659005 0.48851690
+## [13] 0.08735214 0.46839291 0.33306220
 </code></pre>
 
   </article>
