--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 19
+<pre><code>## [1] 21
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4681441
+<pre><code>## [1] 0.3888889
 </code></pre>
 
   </article>
@@ -1134,35 +1134,35 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    2    2    1    5    3    3    2     4     4     2     2
-##  [2,]    3    0    4    3    3    2    2    1    3     1     3     3     1
-##  [3,]    2    4    0    3    1    6    5    4    3     5     6     4     3
-##  [4,]    2    3    3    0    2    5    5    3    2     4     6     4     2
-##  [5,]    1    3    1    2    0    5    4    3    2     4     5     3     2
-##  [6,]    5    2    6    5    5    0    2    3    5     1     3     3     3
-##  [7,]    3    2    5    5    4    2    0    3    5     1     1     1     3
-##  [8,]    3    1    4    3    3    3    3    0    3     2     4     4     1
-##  [9,]    2    3    3    2    2    5    5    3    0     4     6     4     2
-## [10,]    4    1    5    4    4    1    1    2    4     0     2     2     2
-## [11,]    4    3    6    6    5    3    1    4    6     2     0     2     4
-## [12,]    2    3    4    4    3    3    1    4    4     2     2     0     4
-## [13,]    2    1    3    2    2    3    3    1    2     2     4     4     0
-## [14,]    1    4    3    3    2    4    2    4    3     3     3     1     3
-## [15,]    1    2    2    1    1    4    4    2    1     3     5     3     1
+##  [1,]    0    3    3    2    1    4    6    5    5     4     4     3     2
+##  [2,]    3    0    1    1    2    3    5    4    4     3     3     2     1
+##  [3,]    3    1    0    2    2    4    6    5    5     4     4     3     1
+##  [4,]    2    1    2    0    1    2    4    3    3     2     2     1     2
+##  [5,]    1    2    2    1    0    3    5    4    4     3     3     2     1
+##  [6,]    4    3    4    2    3    0    5    4    4     2     3     2     4
+##  [7,]    6    5    6    4    5    5    0    1    2     3     3     3     6
+##  [8,]    5    4    5    3    4    4    1    0    1     2     2     2     5
+##  [9,]    5    4    5    3    4    4    2    1    0     2     1     2     5
+## [10,]    4    3    4    2    3    2    3    2    2     0     1     2     4
+## [11,]    4    3    4    2    3    3    3    2    1     1     0     1     4
+## [12,]    3    2    3    1    2    2    3    2    2     2     1     0     3
+## [13,]    2    1    1    2    1    4    6    5    5     4     4     3     0
+## [14,]    3    2    3    1    2    1    4    3    3     1     2     1     3
+## [15,]    4    3    4    2    3    3    2    1    2     1     1     1     4
 ##       [,14] [,15]
-##  [1,]     1     1
-##  [2,]     4     2
-##  [3,]     3     2
-##  [4,]     3     1
-##  [5,]     2     1
-##  [6,]     4     4
-##  [7,]     2     4
-##  [8,]     4     2
-##  [9,]     3     1
-## [10,]     3     3
-## [11,]     3     5
-## [12,]     1     3
-## [13,]     3     1
+##  [1,]     3     4
+##  [2,]     2     3
+##  [3,]     3     4
+##  [4,]     1     2
+##  [5,]     2     3
+##  [6,]     1     3
+##  [7,]     4     2
+##  [8,]     3     1
+##  [9,]     3     2
+## [10,]     1     1
+## [11,]     2     1
+## [12,]     1     1
+## [13,]     3     4
 ## [14,]     0     2
 ## [15,]     2     0
 </code></pre>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.59269418 0.25453880 0.17436092 0.62824570 0.55507238 0.03743657
-##  [7] 0.08742430 0.22605093 0.31412285 0.11917811 0.02746197 0.13167238
-## [13] 0.46508706 0.33175050 1.00000000
+<pre><code>##  [1] 0.0929488 0.3379132 0.1717706 0.7285275 0.3146273 0.2403256 0.1264694
+##  [8] 0.4280931 0.3976691 0.7847747 0.9179981 1.0000000 0.2435222 0.8134908
+## [15] 0.9249364
 </code></pre>
 
   </article>
