Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -673,13 +673,10 @@ head(acteurs_films,4)
 <slide class="" id="slide-28" style="background:;">
   <!--  <a href="#slide-28"></a> -->
   <hgroup>
-    <h1>Exercice 4 (10-15 minutes)</h1>
+    <h1>Exercice 6 (10-15 minutes)</h1>
   </hgroup>
   <article data-timings="">
     <h2>Combien il y a d&#39;acteurs par film depuis les 10 dernières années?</h2>
-
-<p>Toujours avec la même base de données,
-on voudrait savoir le nombre d&#39;acteurs par film depuis les 10 dernières années.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -687,7 +684,18 @@ on voudrait savoir le nombre d&#39;acteurs par film depuis les 10 dernières ann
 <slide class="" id="slide-29" style="background:;">
   <!--  <a href="#slide-29"></a> -->
   <hgroup>
-    <h1>Exercice 5 (10-15 minutes)</h1>
+    <h1>Exercice 7 (10-15 minutes)</h1>
+  </hgroup>
+  <article data-timings="">
+    <h2>Quel film possède le plus d&#39;acteurs?</h2>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-30" style="background:;">
+  <!--  <a href="#slide-30"></a> -->
+  <hgroup>
+    <h1>Exercice 8 (10-15 minutes)</h1>
   </hgroup>
   <article data-timings="">
     <h2>Existe-t-il un film sans acteurs?</h2>
@@ -697,7 +705,7 @@ on voudrait savoir le nombre d&#39;acteurs par film depuis les 10 dernières ann
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-30" style="background:;">
+<slide class="" id="slide-31" style="background:;">
   <hgroup>
     <h1>Requêtes emboitées</h1>
   </hgroup>
@@ -736,7 +744,7 @@ head(moy_acteurs)
     </div>
   </article>
 </slide>
-<slide class="" id="slide-31" style="background:;">
+<slide class="" id="slide-32" style="background:;">
   <hgroup>
     <h1>Filtrer les requêtes à posteriori</h1>
   </hgroup>
@@ -775,8 +783,8 @@ head(nb_acteurs)
     </div>
   </article>
 </slide>
-<slide class="transition" id="slide-32" style="background:;">
-  <!--  <a href="#slide-32"></a> -->
+<slide class="transition" id="slide-33" style="background:;">
+  <!--  <a href="#slide-33"></a> -->
   <hgroup>
     <h1>Sauvegarder les requêtes</h1>
   </hgroup>
@@ -785,8 +793,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-33" style="background:;">
-  <!--  <a href="#slide-33"></a> -->
+<slide class="" id="slide-34" style="background:;">
+  <!--  <a href="#slide-34"></a> -->
   <hgroup>
     <h1>Sauvegarder une requête</h1>
   </hgroup>
@@ -802,8 +810,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-34" style="background:;">
-  <!--  <a href="#slide-34"></a> -->
+<slide class="" id="slide-35" style="background:;">
+  <!--  <a href="#slide-35"></a> -->
   <hgroup>
     <h1>Sauvegarder une requête</h1>
   </hgroup>
@@ -813,8 +821,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-35" style="background:;">
-  <!--  <a href="#slide-35"></a> -->
+<slide class="transition" id="slide-36" style="background:;">
+  <!--  <a href="#slide-36"></a> -->
   <hgroup>
     <h1>Les requêtes stockées</h1>
   </hgroup>
@@ -823,8 +831,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-36" style="background:;">
-  <!--  <a href="#slide-36"></a> -->
+<slide class="" id="slide-37" style="background:;">
+  <!--  <a href="#slide-37"></a> -->
   <hgroup>
     <h1>Les requêtes stockées: les vues</h1>
   </hgroup>
@@ -850,8 +858,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-37" style="background:;">
-  <!--  <a href="#slide-37"></a> -->
+<slide class="transition" id="slide-38" style="background:;">
+  <!--  <a href="#slide-38"></a> -->
   <hgroup>
     <h1>Manipuler les enregistrements</h1>
   </hgroup>
@@ -860,8 +868,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-38" style="background:;">
-  <!--  <a href="#slide-38"></a> -->
+<slide class="" id="slide-39" style="background:;">
+  <!--  <a href="#slide-39"></a> -->
   <hgroup>
     <h1>Mettre à jour des enregistrements</h1>
   </hgroup>
@@ -878,8 +886,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-39" style="background:;">
-  <!--  <a href="#slide-39"></a> -->
+<slide class="" id="slide-40" style="background:;">
+  <!--  <a href="#slide-40"></a> -->
   <hgroup>
     <h1>Supprimer des enregistrements</h1>
   </hgroup>
@@ -899,8 +907,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-40" style="background:;">
-  <!--  <a href="#slide-40"></a> -->
+<slide class="transition" id="slide-41" style="background:;">
+  <!--  <a href="#slide-41"></a> -->
   <hgroup>
     <h1>Travail de la semaine</h1>
   </hgroup>
@@ -909,8 +917,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-41" style="background:;">
-  <!--  <a href="#slide-41"></a> -->
+<slide class="" id="slide-42" style="background:;">
+  <!--  <a href="#slide-42"></a> -->
   <hgroup>
     <h1>Travail de la semaine</h1>
   </hgroup>
@@ -930,8 +938,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-42" style="background:;">
-  <!--  <a href="#slide-42"></a> -->
+<slide class="" id="slide-43" style="background:;">
+  <!--  <a href="#slide-43"></a> -->
   <hgroup>
     <h1>Travail de la semaine</h1>
   </hgroup>
@@ -951,8 +959,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-43" style="background:;">
-  <!--  <a href="#slide-43"></a> -->
+<slide class="" id="slide-44" style="background:;">
+  <!--  <a href="#slide-44"></a> -->
   <hgroup>
     <h1>Lectures</h1>
   </hgroup>
@@ -967,8 +975,8 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-44" style="background:;">
-  <!--  <a href="#slide-44"></a> -->
+<slide class="transition" id="slide-45" style="background:;">
+  <!--  <a href="#slide-45"></a> -->
   <hgroup>
     <h1>Découper les scripts avec R</h1>
   </hgroup>
@@ -1145,37 +1153,37 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=28 title='Exercice 4 (10-15 minutes)'>
+        data-slide=28 title='Exercice 6 (10-15 minutes)'>
          28
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title='Exercice 5 (10-15 minutes)'>
+        data-slide=29 title='Exercice 7 (10-15 minutes)'>
          29
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='Requêtes emboitées'>
+        data-slide=30 title='Exercice 8 (10-15 minutes)'>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='Filtrer les requêtes à posteriori'>
+        data-slide=31 title='Requêtes emboitées'>
          31
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=32 title='Sauvegarder les requêtes'>
+        data-slide=32 title='Filtrer les requêtes à posteriori'>
          32
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=33 title='Sauvegarder une requête'>
+        data-slide=33 title='Sauvegarder les requêtes'>
          33
       </a>
     </li>
@@ -1187,37 +1195,37 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='Les requêtes stockées'>
+        data-slide=35 title='Sauvegarder une requête'>
          35
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=36 title='Les requêtes stockées: les vues'>
+        data-slide=36 title='Les requêtes stockées'>
          36
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=37 title='Manipuler les enregistrements'>
+        data-slide=37 title='Les requêtes stockées: les vues'>
          37
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=38 title='Mettre à jour des enregistrements'>
+        data-slide=38 title='Manipuler les enregistrements'>
          38
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=39 title='Supprimer des enregistrements'>
+        data-slide=39 title='Mettre à jour des enregistrements'>
          39
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=40 title='Travail de la semaine'>
+        data-slide=40 title='Supprimer des enregistrements'>
          40
       </a>
     </li>
@@ -1235,14 +1243,20 @@ TO &#39;/home/etudiant/Documents/films_A.csv&#39; WITH DELIMITER &#39;;&#39; CSV
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=43 title='Lectures'>
+        data-slide=43 title='Travail de la semaine'>
          43
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=44 title='Découper les scripts avec R'>
+        data-slide=44 title='Lectures'>
          44
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=45 title='Découper les scripts avec R'>
+         45
       </a>
     </li>
   </ul>
