Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -869,7 +869,7 @@ head(nb_acteurs)
 <li>Nombre de liens par étudiant</li>
 <li>Décompte de liens par paire d&#39;étudiants</li>
 </ul></li>
-<li><p>Enregistrer le résultat des requêtes</p></li>
+<li><p>Enregistrer le résultat des requêtes dans un fichier csv (voir la diapo 34 de ce cours)</p></li>
 </ol>
 
   </article>
