--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 18
+<pre><code>## [1] 27
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3873457
+<pre><code>## [1] 0.340192
 </code></pre>
 
   </article>
@@ -1134,35 +1134,35 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    2    2    3    2    1    1  Inf     2     3     1     2
-##  [2,]    3    0    3    4    5    2    2    3  Inf     1     5     2     1
-##  [3,]    2    3    0    2    3    2    1    1  Inf     3     3     3     2
-##  [4,]    2    4    2    0    1    2    3    1  Inf     3     1     3     4
-##  [5,]    3    5    3    1    0    3    4    2  Inf     4     2     4     5
-##  [6,]    2    2    2    2    3    0    3    1  Inf     1     3     2     3
-##  [7,]    1    2    1    3    4    3    0    2  Inf     3     4     2     1
-##  [8,]    1    3    1    1    2    1    2    0  Inf     2     2     2     3
-##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
-## [10,]    2    1    3    3    4    1    3    2  Inf     0     4     1     2
-## [11,]    3    5    3    1    2    3    4    2  Inf     4     0     4     5
-## [12,]    1    2    3    3    4    2    2    2  Inf     1     4     0     3
-## [13,]    2    1    2    4    5    3    1    3  Inf     2     5     3     0
-## [14,]    3    2    3    3    4    1    4    2  Inf     1     4     2     3
-## [15,]    3    2    3    4    5    2    2    3  Inf     1     5     2     1
+##  [1,]    0    4    3    4    3    5    4  Inf    2     4     1     1     3
+##  [2,]    4    0    3    4    2    3    3  Inf    2     1     3     3     3
+##  [3,]    3    3    0    2    2    3    1  Inf    1     3     2     2     1
+##  [4,]    4    4    2    0    2    4    2  Inf    2     3     3     3     1
+##  [5,]    3    2    2    2    0    2    2  Inf    1     1     2     2     1
+##  [6,]    5    3    3    4    2    0    2  Inf    3     2     4     4     3
+##  [7,]    4    3    1    2    2    2    0  Inf    2     2     3     3     1
+##  [8,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf   Inf   Inf   Inf   Inf
+##  [9,]    2    2    1    2    1    3    2  Inf    0     2     1     1     1
+## [10,]    4    1    3    3    1    2    2  Inf    2     0     3     3     2
+## [11,]    1    3    2    3    2    4    3  Inf    1     3     0     2     2
+## [12,]    1    3    2    3    2    4    3  Inf    1     3     2     0     2
+## [13,]    3    3    1    1    1    3    1  Inf    1     2     2     2     0
+## [14,]    3    1    2    3    2    3    3  Inf    1     1     2     2     2
+## [15,]    4    2    2    3    1    1    1  Inf    2     1     3     3     2
 ##       [,14] [,15]
-##  [1,]     3     3
-##  [2,]     2     2
-##  [3,]     3     3
-##  [4,]     3     4
-##  [5,]     4     5
-##  [6,]     1     2
-##  [7,]     4     2
-##  [8,]     2     3
-##  [9,]   Inf   Inf
+##  [1,]     3     4
+##  [2,]     1     2
+##  [3,]     2     2
+##  [4,]     3     3
+##  [5,]     2     1
+##  [6,]     3     1
+##  [7,]     3     1
+##  [8,]   Inf   Inf
+##  [9,]     1     2
 ## [10,]     1     1
-## [11,]     4     5
-## [12,]     2     2
-## [13,]     3     1
+## [11,]     2     3
+## [12,]     2     3
+## [13,]     2     2
 ## [14,]     0     2
 ## [15,]     2     0
 </code></pre>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.6011647 0.5154188 0.4182311 0.3134140 0.1059369 0.7835831 0.5219748
-##  [8] 0.7153607 0.0000000 1.0000000 0.1059369 0.5412088 0.5248652 0.6028679
-## [15] 0.5154188
+<pre><code>##  [1] 9.489779e-02 1.176719e-01 8.030454e-01 2.272187e-01 5.262632e-01
+##  [6] 8.086518e-02 5.951291e-01 3.753705e-17 1.000000e+00 2.752812e-01
+## [11] 2.279291e-01 2.279291e-01 8.642665e-01 2.899765e-01 3.884501e-01
 </code></pre>
 
   </article>
